fixed remove button not showing if text too long

--- a/src/styles.css
+++ b/src/styles.css
@@ -84,7 +84,12 @@ body
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     gap: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    word-wrap: break-word;
+    overflow: scroll;
 }
 
 .notes-page button
